--- a/Famoser.ETHZMensa.View/Famoser.ETHZMensa.View.csproj
+++ b/Famoser.ETHZMensa.View/Famoser.ETHZMensa.View.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\ViewModelLocator.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Famoser.FrameworkEssentials, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
