--- a/Famoser.ETHZMensa.View/packages.config
+++ b/Famoser.ETHZMensa.View/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Famoser.FrameworkEssentials" version="1.2.1" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmLight" version="5.1.1.0" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
