--- a/Famoser.ETHZMensa.Data/Famoser.ETHZMensa.Data.csproj
+++ b/Famoser.ETHZMensa.Data/Famoser.ETHZMensa.Data.csproj
@@ -35,6 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\DataService.cs" />
     <Compile Include="Services\IDataService.cs" />
     <Compile Include="Services\IStorageService.cs" />
   </ItemGroup>
