removed unnecessary folder

--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Famoser.ETHZMensa.Presentation.WinUniversal.csproj
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Famoser.ETHZMensa.Presentation.WinUniversal.csproj
@@ -158,9 +158,7 @@
       <Name>Famoser.ETHZMensa.View</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="UserControl\" />
-  </ItemGroup>
+  <ItemGroup />
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
