--- a/Famoser.ETHZMensa.Business/Famoser.ETHZMensa.Business.csproj
+++ b/Famoser.ETHZMensa.Business/Famoser.ETHZMensa.Business.csproj
@@ -41,6 +41,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enums\LocationType.cs" />
     <Compile Include="Helpers\ConfigConverter.cs" />
     <Compile Include="Helpers\HtmlParser.cs" />
     <Compile Include="Models\Base\ModelBase.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Models\LocationModel.cs" />
     <Compile Include="Models\MensaModel.cs" />
     <Compile Include="Models\MenuModel.cs" />
+    <Compile Include="Models\SaveModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\Interfaces\IMensaRepository.cs" />
     <Compile Include="Repositories\MensaRespository.cs" />
