--- a/Famoser.ETHZMensa.Presentation.WinUniversal/ApplicationInsights.config
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/ApplicationInsights.config
@@ -1,3 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ApplicationInsights xmlns = "http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
+  <InstrumentationKey>
+    135f9ff9-fddf-4be1-a30f-36254cda8bcf
+  </InstrumentationKey>
 </ApplicationInsights>
