bigfixes & unit test running again

--- a/Famoser.ETHZMensa.Business/Famoser.ETHZMensa.Business.csproj
+++ b/Famoser.ETHZMensa.Business/Famoser.ETHZMensa.Business.csproj
@@ -44,8 +44,10 @@
     <Compile Include="Enums\LocationType.cs" />
     <Compile Include="Helpers\ConfigConverter.cs" />
     <Compile Include="Helpers\HtmlParser.cs" />
+    <Compile Include="Helpers\UriHelper.cs" />
     <Compile Include="Models\Base\ModelBase.cs" />
     <Compile Include="Models\ConfigModels\ConfigModel.cs" />
+    <Compile Include="Models\ConfigModels\LinkModel.cs" />
     <Compile Include="Models\ConfigModels\LocationConfigModel.cs" />
     <Compile Include="Models\ConfigModels\MensaConfigModel.cs" />
     <Compile Include="Models\Eth\Allergen.cs" />
