--- a/Famoser.ETHZMensa.Presentation.WinUniversal/project.json
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/project.json
@@ -1,12 +1,11 @@
 ﻿{
   "dependencies": {
-    "Famoser.FrameworkEssentials": "1.2.1",
-    "Microsoft.ApplicationInsights": "1.2.3",
-    "Microsoft.ApplicationInsights.PersistenceChannel": "1.2.3",
-    "Microsoft.ApplicationInsights.WindowsApps": "1.1.1",
+    "Famoser.FrameworkEssentials": "2.6.4",
+    "Famoser.FrameworkEssentials.UniversalWindows": "1.1.2",
+    "Famoser.Telemetry.UniversalWindows": "1.0.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.1.0",
     "Microsoft.Xaml.Behaviors.Uwp.Native": "1.0.2",
-    "MvvmLight": "5.2.0"
+    "MvvmLight": "5.3.0"
   },
   "frameworks": {
     "uap10.0": {}
