--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Famoser.ETHZMensa.Presentation.WinUniversal.csproj
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Famoser.ETHZMensa.Presentation.WinUniversal.csproj
@@ -16,11 +16,11 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>Famoser.ETHZMensa.Presentation.WinUniversal_StoreKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>Famoser.ETHZMensa.Presentation.WinUniversal_TemporaryKey.pfx</PackageCertificateKeyFile>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
-    <PackageCertificateThumbprint>7BDDAFD763A51CA5467B02A85A1A0EE2677CFFEA</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>B587F8F48EDF435DC243C34526A42CD9F70DEFEF</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -99,7 +99,6 @@
     <Content Include="Assets\Configuration\Locations.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="Famoser.ETHZMensa.Presentation.WinUniversal_StoreKey.pfx" />
     <None Include="Famoser.ETHZMensa.Presentation.WinUniversal_TemporaryKey.pfx" />
     <None Include="project.json" />
   </ItemGroup>
