--- a/Famoser.ETHZMensa.View/Famoser.ETHZMensa.View.csproj
+++ b/Famoser.ETHZMensa.View/Famoser.ETHZMensa.View.csproj
@@ -46,7 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums\Messages.cs" />
-    <Compile Include="Enums\Pages.cs" />
+    <Compile Include="Enums\PageKeys.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IInteractionService.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
