--- a/Famoser.ETHZMensa.Presentation.WinUniversal/project.json
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/project.json
@@ -3,9 +3,10 @@
     "Famoser.FrameworkEssentials": "2.7.6",
     "Famoser.FrameworkEssentials.UniversalWindows": "1.2.1",
     "Famoser.Telemetry.UniversalWindows": "1.0.0",
-    "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.4",
+    "Microsoft.NETCore.UniversalWindowsPlatform": "6.0.6",
     "Microsoft.Xaml.Behaviors.Uwp.Native": "1.0.4",
-    "MvvmLight": "5.3.0"
+    "MvvmLight": "5.3.0",
+    "Newtonsoft.Json": "10.0.3"
   },
   "frameworks": {
     "uap10.0.10240": {}
