--- a/Famoser.ETHZMensa.Presentation.WinUniversal/Famoser.ETHZMensa.Presentation.WinUniversal.csproj
+++ b/Famoser.ETHZMensa.Presentation.WinUniversal/Famoser.ETHZMensa.Presentation.WinUniversal.csproj
@@ -16,11 +16,11 @@
     <MinimumVisualStudioVersion>14</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
-    <PackageCertificateKeyFile>Famoser.ETHZMensa.Presentation.WinUniversal_StoreKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateKeyFile>Famoser.ETHZMensa.Presentation.WinUniversal_TemporaryKey.pfx</PackageCertificateKeyFile>
     <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
     <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
-    <PackageCertificateThumbprint>655EA8700D63618C318CF4FA659CFC268CA76972</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>F5F57CBA423897A9A44643BEAAED14AFCA14E686</PackageCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -96,7 +96,6 @@
     <Content Include="Assets\Configuration\Locations.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <None Include="Famoser.ETHZMensa.Presentation.WinUniversal_StoreKey.pfx" />
     <None Include="Famoser.ETHZMensa.Presentation.WinUniversal_TemporaryKey.pfx" />
     <None Include="project.json" />
   </ItemGroup>
@@ -165,7 +164,6 @@
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
-    <None Include="Package.StoreAssociation.xml" />
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
